# csqc

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  SYNTAX.md  csqlang  example.csq
.cache/clangd/index/: escape.h.259B71154809A03F.idx  logger.c.12E40BD5CF3D5760.idx  logger.h.1D1BBC3C72ED3E44.idx  main.c.4DEB19A08BB7CAB9.idx  parser.c.410ECD5BE0919951.idx  parser.h.ABAD0201FEFF5A9D.idx  scanner.c.2ECE04E4A296E9CF.idx  scanner.h.C334272C8C7B1E3B.idx
include/csqc/: parser.h  scanner.h
include/csquared/: ast.h  endl.h  escape.h  file.h  logger.h  parser.h  scanner.h  symbol.h  token.h
source/: ast.c  file.c  lex.c  logger.c  main.c  parser.c  scanner.c  string.c  symbol.c  token.c  vector.c
